tests/fixtures/pass/basics/len_builtin_parity.walrus
import "std/core" as core;

println(core.len({"a": 1, "b": 2}));
println(core.len([]));
println(core.len(""));
