tests/fixtures/fail/stdlib/stdlib_math_log_invalid_base_vm.walrus
import "std/math";

println(math.log(10, 1));
